unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/Web_Analytics_Events_View_Google_Ana__dlm.object-meta.xml
<CustomObject>
    <label>Web Analytics Events View Google Analyti</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Web Analytics Events View Google Analyti</labelOverride>
        <masterLabel>Web Analytics Events View Google Analyti</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>