unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/fields/cdp_sys_SourceVersion__c.field-meta.xml
<CustomField>
    <fullName>cdp_sys_SourceVersion__c</fullName>
    <label>cdp_sys_SourceVersion</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>cdp_sys_SourceVersion</labelOverride>
        <masterLabel>cdp_sys_SourceVersion</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>