unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/fields/Events_Value__c.field-meta.xml
<CustomField>
    <fullName>Events_Value__c</fullName>
    <label>Events Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Events Value</labelOverride>
        <masterLabel>Events Value</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>