unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/fields/Total_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Events__c</fullName>
    <label>Total Events</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Total Events</labelOverride>
        <masterLabel>Total Events</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>