unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/fields/Web_Analytics_Event__c.field-meta.xml
<CustomField>
    <fullName>Web_Analytics_Event__c</fullName>
    <label>Web Analytics Event</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>Web Analytics Event</labelOverride>
        <masterLabel>Web Analytics Event</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>