unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/fields/Web_Analytics_Events_View_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Web_Analytics_Events_View_Primary_Key__c</fullName>
    <label>Web Analytics Events View Primary Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>Web Analytics Events View Primary Key</labelOverride>
        <masterLabel>Web Analytics Events View Primary Key</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>