unpackaged/main/default/objects/Web_Analytics_Events_View_Google_Ana__dlm/fields/Web_Analytics_Site__c.field-meta.xml
<CustomField>
    <fullName>Web_Analytics_Site__c</fullName>
    <label>Web Analytics Site</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>Web Analytics Site</labelOverride>
        <masterLabel>Web Analytics Site</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>